getHull method